# TrainBuilder

./: .dockerignore  .gitignore  CMakeLists.txt  CURRENT_SETUP.md  DOCKER.md  Dockerfile  Dockerfile.vnc  FINAL_STATUS.md  IMPROVEMENTS.md  MAP_SOLUTION.md  Makefile  QUICKSTART.md  QUICK_START.md  README.md  TILE_CACHE_APPROACH.md  VISUAL_CHANGES.md  docker-compose.vnc.yml  docker-compose.yml  download_osm_tiles.sh  download_tiles.sh  index.html  nginx.conf  package-lock.json  package.json  run-docker.sh  run.md  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
backend/: Dockerfile  package-lock.json  package.json  tsconfig.json
backend/data/networks/: 10b0f7be-d580-4a23-aa22-12293620e94b.json  11cfe9e7-b7b8-4d6f-a92c-a3f2650f729e.json  1989091e-9d1e-486b-8beb-180e4835093f.json  19a4a106-918e-4a33-bb40-38b509c67d25.json  1fa8a071-d04a-4bd8-b690-039f2e6751ea.json  2fc160b2-d382-4813-a1f5-77562e93c1be.json  3946be11-491a-4b28-93c2-a8a19d0450e7.json  7317273c-dc63-4e17-bfe8-92365cd8033c.json  7932c7b9-e568-461a-97ea-5443e1260d38.json  abe58cd6-3868-420c-b004-c4bcaacbb018.json  c2e55e4c-aaae-49c3-a7a2-11bb84602d88.json  cf42f942-808d-49d0-a606-398bb0e4ad01.json  f885dd9c-64b2-4de6-9c3a-871e7dc882ff.json
backend/scripts/: fetch-tiles.js
backend/src/: index.ts
backend/src/data/: belgium.geojson.ts  netherlands.geojson.ts
backend/src/routes/: computation.routes.ts  geodata.routes.ts  network.routes.ts
backend/src/services/: cost.service.ts  geometry.service.ts
backend/src/types/: index.ts
documentation/: api.md  architecture.md  database.md  development.md  frontend.md  geodata-optimization.md  idea.md
include/: CityRenderer.h  Economy.h  Game.h  GameState.h  MapRenderer.h  Station.h  Train.h  TrainLine.h  UI.h
src/: App.tsx  CityRenderer.cpp  Economy.cpp  Game.cpp  GameState.cpp  MapRenderer.cpp  Station.cpp  Train.cpp  TrainLine.cpp  UI.cpp  index.css  main.cpp
src/components/: Legend.tsx  MapCanvas.tsx  Statistics.tsx  Toolbar.tsx
src/features/map/: BoundedTileLayer.tsx  MapSelection.tsx  MapView.tsx  SimpleMapBackground.tsx  map-styles.css
src/features/ui/: BottomBar.tsx  (+2 more)
src/lib/: colors.ts  simulation.ts
src/services/: api.ts
src/state/: store.ts
src/store/: gameStore.ts
src/types/: index.ts
(+1 files in other folders)
